crates/uitest/fixtures/ty/def/alias_cycle.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/def/alias_cycle.fe
---
error[3-0004]: recursive type alias cycle is detected
  ┌─ alias_cycle.fe:1:11
  │
1 │ type T1 = T1
  │           ^^ cycle happens here

error[3-0004]: recursive type alias cycle is detected
  ┌─ alias_cycle.fe:4:11
  │
3 │ type T2 = T3
  │      -- type alias defined here
4 │ type T3 = T4
  │           ^^ cycle happens here
5 │ type T4 = T2
  │      -- type alias defined here
